--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.10...3.11)
 project(tg_waifu)
-set(CMAKE_C_IMPLICIT_LINK_LIBRARIES    "")
-set(CMAKE_CXX_IMPLICIT_LINK_LIBRARIES  "")
+
+set(CMAKE_C_IMPLICIT_LINK_LIBRARIES "")
+set(CMAKE_CXX_IMPLICIT_LINK_LIBRARIES "")
 set(CMAKE_CXX_STANDARD 23)
 
 file(
@@ -16,13 +17,15 @@ CPMAddPackage(
         NAME TGBM
         GIT_REPOSITORY https://github.com/PaRat07/TGBM
         GIT_TAG        origin/master
-        OPTIONS "TGBM_ENABLE_EXAMPLES ON"
 )
 
 CPMAddPackage("gh:PaRat07/SQLiteCpp#origin/master")
 
-add_executable(tg_waifu main.cpp
-        database.h)
+add_executable(tg_waifu
+        main.cpp
+        src/database.cpp)
+
+target_include_directories(tg_waifu PUBLIC include)
 
 target_link_libraries(tg_waifu
         tgbmlib
